# xml-online-viewer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  cache.py  config.py  logging_setup.py  main.py  rate_limit.py
backend/app/api/: _common.py  releases.py  validate.py  xml.py  xsd.py
backend/app/parser/: __init__.py  security.py  validate.py  xml_tree.py  xsd_store.py
backend/app/parser/resources/: xmldsig-core-schema.xsd
backend/app/report/: __init__.py  excel.py
backend/tests/: test_api.py  test_security.py
docs/: DEPLOY_CLOUD_RUN.md  TECHNICAL.md
e2e/: package-lock.json  package.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: FundsXmlReleases.tsx  ThemeToggle.tsx  Uploader.tsx  ValidationPanel.tsx
frontend/src/components/DiagramView/: DiagramView.tsx  XmlElementNode.tsx  anchorViewport.ts  buildGraph.ts  exportImage.ts
frontend/src/components/XmlTreeView/: XmlTreeView.tsx  treeRows.ts
frontend/src/stores/: appStore.ts
frontend/src/types/: model.ts
samples/: library.xml  library.xsd
scripts/: record_demo.mjs
