[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fundsxml-online-validator"
version = "0.1.0"
description = "Online XML data viewer and XSD schema validator with Excel error reports, self-hosted via Docker."
requires-python = ">=3.10"
authors = [{ name = "Karl Kauc" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "lxml>=5.3",
    "pydantic>=2.8",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "slowapi>=0.1.9",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app.parser.resources" = ["*.xsd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "C4", "SIM"]
